--- a/sass/sections/_advanteges.scss
+++ b/sass/sections/_advanteges.scss
@@ -1,16 +1,30 @@
 .advantages {
-  padding: 94px 0 47px;
+  padding: 60px 0;
+
+  @media screen and (min-width: 1200px) {
+    padding: 94px 0 47px;
+  }
 
   &__list {
-    @include flexbox($justify: space-between, $align: flex-start);
+    @include flexbox($align: flex-start);
+    flex-wrap: wrap;
+    gap: 30px;
   }
 
   &__item {
-    max-width: 270px;
+    max-width: 450px;
+
+    @media screen and (min-width: 768px) {
+      width: 354px;
+    }
+
+    @media screen and (min-width: 1200px) {
+      width: 270px;
+    } 
   }
 
   &__icon {
-    width: 270px;
+    width: 100%;
     height: 120px;
     background-color: $background-team-color;
     border-radius: 4px;
