--- a/sass/sections/_clients.scss
+++ b/sass/sections/_clients.scss
@@ -1,21 +1,40 @@
 .client {
-    padding: 94px 0;
+    padding: 60px 0;
+
+    @media screen and (min-width: 1200px) {
+        padding: 94px 0;
+    }
 
     &__title {
         @extend %title;
+
+        @media screen and (min-width: 1200px) {
+            font-size: 36px;
+            margin-bottom: 50px;
+        }
     }
 
     &__list {
-        @include flexbox($wrap: nowrap);
+        @include flexbox();
         gap: 30px;
+        width: 100%;
     }
 
     &__link {
-        padding: 16px 32px;
+        width: 210px;
+        height: 92px;
+        @include flexbox();
         border-radius: 4px;
         border: 1px solid $icon-fill;
-        display: block;
         transition: border cubic-bezier(0.4, 0, 0.2, 1) 250ms;
+
+        @media screen and (min-width: 768px) {
+            width: 226px;
+        }
+
+        @media screen and (min-width: 1200px) {
+            width: 170px;
+        }
 
         &:hover,
         &:focus {
