--- a/sass/sections/_footer.scss
+++ b/sass/sections/_footer.scss
@@ -4,7 +4,24 @@
 
     &__container {
         @include flexbox();
-        gap: 93px;
+        gap: 60px;
+
+        @media screen and (min-width: 768px) {
+            gap: 60px 165px;
+        }
+
+        @media screen and (min-width: 1200px) {
+            gap: 93px;
+        }
+    }
+
+    &__addressing {
+        @include flexbox();
+        flex-direction: column;
+
+        @media screen and (min-width: 1200px) {
+            display: block;
+            }
     }
 
     &__logo {
@@ -15,7 +32,17 @@
         }
     }
 
+    &__list {
+        @include flexbox();
+        flex-direction: column;
+        gap: 8px;
+        margin-top: 20px;
 
+        @media screen and (min-width: 1200px) {
+            align-items: flex-start;
+            gap: 9px;
+        }
+    }
 
     &__map {
         color: $second-accent-color;
@@ -23,9 +50,8 @@
         font-weight: 400;
         line-height: 1.71;
         letter-spacing: 0.42px;
-        margin-top: 20px;
-        display: block;
         font-style: normal;
+        text-align: center;
     }
 
     &__connection {
@@ -34,9 +60,8 @@
         font-weight: 400;
         line-height: 1.71;
         letter-spacing: 0.42px;
-        margin-top: 9px;
-        display: block;
         font-style: normal;
+        text-align: center;
     }
 
     &__icon {
@@ -50,6 +75,11 @@
         letter-spacing: 0.42px;
         text-transform: uppercase;
         margin-bottom: 20px;
+        text-align: center;
+
+        @media screen and (min-width: 1200px) {
+                text-align: left;
+            }
     }
 
     &__icons {
@@ -79,6 +109,15 @@
 
     &__form {
         padding-top: 12px;
+        width: 100%;
+
+        @media screen and (min-width: 768px) {
+            max-width: 450px;
+            }
+
+                        @media screen and (min-width: 1200px) {
+                            max-width: 570px;
+                        }
     }
 
     &__call {
@@ -89,11 +128,23 @@
         letter-spacing: 0.42px;
         text-transform: uppercase;
         margin-bottom: 20px;
+        text-align: center;
+
+        @media screen and (min-width: 1200px) {
+            text-align: left;
+            }
     }
 
     &__structure {
         @include flexbox();
-        gap: 12px;
+        gap: 20px;
+        flex-direction: column;
+        width: 100%;
+
+        @media screen and (min-width: 1200px) {
+            gap: 12px;
+            flex-direction: row;
+        }
     }
 
     &__input {
@@ -102,13 +153,18 @@
         background: rgba(33, 150, 243, 0.01);
         box-shadow: 0px 4px 4px 0px rgba(0, 0, 0, 0.15);
         padding: 15px 16px;
-        width: 358px;
+        width: 100%;
+        display: block;
         color: $second-accent-color;
         font-size: 16px;
         font-weight: 400;
         line-height: 1.25;
         letter-spacing: 0.48px;
         transition: border-color cubic-bezier(0.4, 0, 0.2, 1) 250ms;
+
+        @media screen and (min-width: 1200px) {
+            width: 358px;
+            }
 
         &:hover,
         &:focus {
@@ -132,13 +188,17 @@
         font-weight: 700;
         line-height: 1.87;
         letter-spacing: 0.96px;
-        padding: 10px 28px;
+        padding: 10px 28px 10px 31px;
         background-color: $accent-color;
         @include flexbox();
         gap: 10px;
         border-radius: 4px;
         box-shadow: 0px 4px 4px 0px rgba(0, 0, 0, 0.15);
         transition: background-color cubic-bezier(0.4, 0, 0.2, 1) 250ms;
+
+        @media screen and (min-width: 1200px) {
+        padding: 10px 28px;
+        }
 
         &:hover,
         &:focus {
