--- a/sass/sections/_header.scss
+++ b/sass/sections/_header.scss
@@ -1,15 +1,27 @@
 .header {
     border-bottom: 1px solid $header-frame-color;
-    padding: 24px 0;
+    padding: 10px 0;
     position: fixed;
     width: 100%;
     background-color: $background-color;
     z-index: 3;
     box-shadow: 0px 3px 10px rgba(0, 0, 0, 0.25);
 
+    @media screen and (min-width: 768px) {
+        padding: 21px 0;
+    }
+
+    @media screen and (min-width: 1200px) {
+        padding: 24px 0;
+    }
+
 
     &__container {
-        @include flexbox();
+        @include flexbox($justify: space-between);
+
+        @media screen and (min-width: 768px) {
+            @include flexbox();
+        }
     }
 
     &__logo {
@@ -21,9 +33,17 @@
     }
 
     &__list {
-        @include flexbox();
-        gap: 50px;
-        margin-left: 93px;
+        display: none;
+
+        @media screen and (min-width: 768px) {
+            margin-left: 89px;
+            @include flexbox();
+            gap: 50px;
+        }
+
+        @media screen and (min-width: 1200px) {
+            margin-left: 93px;
+        }
     }
 
     &__link {
@@ -65,19 +85,38 @@
     }
 
     &__contacts {
-        @include flexbox();
-        gap: 50px;
-        margin-left: auto;
+        display: none;
+
+        @media screen and (min-width: 768px) {
+            @include flexbox($align: flex-start);
+            gap: 10px;
+            flex-direction: column;
+            margin-left: auto;
+        }
+
+        @media screen and (min-width: 1200px) {
+            @include flexbox();
+            flex-direction: row;
+            gap: 50px;
+            margin-left: auto;
+        }
     }
 
     &__address {
-        color: $text-color;
-        font-size: 14px;
-        font-weight: 500;
-        letter-spacing: 0.28px;
-        @include flexbox();
-        gap: 10px;
-        transition: color cubic-bezier(0.4, 0, 0.2, 1) 250ms;
+
+        @media screen and (min-width: 768px) {
+            color: $text-color;
+            font-size: 12px;
+            font-weight: 500;
+            letter-spacing: 0.28px;
+            @include flexbox();
+            gap: 10px;
+            transition: color cubic-bezier(0.4, 0, 0.2, 1) 250ms;
+        }
+
+        @media screen and (min-width: 1200px) {
+            font-size: 14px;
+        }
 
         &:hover,
         &:focus {
@@ -97,5 +136,34 @@
     &__icon {
         fill: $text-color;
         transition: fill cubic-bezier(0.4, 0, 0.2, 1) 250ms;
+    }
+
+    &__contact:first-child &__icon {
+
+        @media screen and (min-width: 1200px) {
+            width: 16px;
+            height: 12px;
+        }
+    }
+
+    &__contact:last-child &__icon {
+
+        @media screen and (min-width: 1200px) {
+            width: 10px;
+            height: 16px;
+        }
+    }
+
+    &__menu {
+        fill: $title-color;
+
+        @media screen and (min-width: 768px) {
+            display: none;
+        }
+
+        &:hover,
+        &:focus {
+            fill: $accent-color;
+        }
     }
 }
