--- a/sass/sections/_hero.scss
+++ b/sass/sections/_hero.scss
@@ -1,15 +1,32 @@
 .hero__padding {
-    padding: 40px 0;
+    height: 60px;
+
+    @media screen and (min-width: 768px) {
+        height: 80px;
+    }
 }
 
 .hero {
     background-image: linear-gradient(rgba(47, 48, 58, 0.4),
             rgba(47, 48, 58, 0.4)),
-        url(../img/hero/hero-background.jpg);
-    padding: 200px 0;
+        url(../img/hero/hero-background-mobile.webp);
+    padding: 118px 0;
     background-position: center;
     background-size: cover;
     background-repeat: no-repeat;
+
+    @media screen and (min-width: 768px) {
+        background-image: linear-gradient(rgba(47, 48, 58, 0.4),
+                rgba(47, 48, 58, 0.4)),
+            url(../img/hero/hero-background-tablet.webp);
+    }
+
+    @media screen and (min-width: 1200px) {
+        background-image: linear-gradient(rgba(47, 48, 58, 0.4),
+                rgba(47, 48, 58, 0.4)),
+            url(../img/hero/hero-background-desktop.jpg);
+        padding: 200px 0;
+    }
 
     &__container {
         @include flexbox();
@@ -18,17 +35,25 @@
 
     &__title {
         color: $second-accent-color;
-        text-align: center;
-        font-size: 44px;
         font-weight: 900;
-        line-height: 1.36;
-        letter-spacing: 2.64px;
+        font-size: 26px;
+        line-height: 1.62;
+        letter-spacing: 0.06em;
         text-transform: uppercase;
-        max-width: 696px;
-        margin-bottom: 40px;
+        text-align: center;
+        max-width: 360px;
         animation-name: title-move;
         animation-duration: 1s;
         animation-timing-function: ease-in-out;
+        margin-bottom: 30px;
+
+        @media screen and (min-width: 1200px) {
+            font-size: 44px;
+            line-height: 1.36;
+            letter-spacing: 2.64px;
+            max-width: 696px;
+            margin-bottom: 40px;
+        }
     }
 
 
@@ -38,6 +63,10 @@
         animation-name: btn-move;
         animation-duration: 1s;
         animation-timing-function: ease-in-out;
+
+        @media screen and (min-width: 1200px) {
+                padding: 10px 32px;
+            }
 
         &:hover,
         &:focus {
