--- a/sass/sections/_team.scss
+++ b/sass/sections/_team.scss
@@ -1,9 +1,15 @@
 .team {
     background: $background-team-color;
-    padding: 94px 0;
+    padding: 60px 0;
+
+    @media screen and (min-width: 1200px) {
+        display: block;
+        padding: 94px 0;
+    }
 
     &__list {
-        @include flexbox($justify: space-between);
+        @include flexbox();
+        gap: 30px;
     }
 
     &__item {
@@ -11,8 +17,17 @@
         background: $background-color;
         box-shadow: 0px 2px 1px 0px rgba(0, 0, 0, 0.2),
             0px 1px 1px 0px rgba(0, 0, 0, 0.14), 0px 1px 3px 0px rgba(0, 0, 0, 0.12);
-        max-width: 270px;
-        padding-bottom: 30px;
+        width: 450px;
+        padding-bottom: 24px;
+
+        @media screen and (min-width: 768px) {
+            width: 354px;
+        }
+
+        @media screen and (min-width: 1200px) {
+            width: 270px;
+            padding-bottom: 30px;
+        }
     }
 
     &__photo {
@@ -21,6 +36,11 @@
 
     &__title {
         @extend %title;
+
+        @media screen and (min-width: 1200px) {
+            font-size: 36px;
+            margin-bottom: 50px;
+        }
     }
 
     &__subtitle {
