--- a/styles/portfolio.css
+++ b/styles/portfolio.css
@@ -174,7 +174,7 @@ body {
 .header__container {
   display: flex;
   align-items: center;
-  justify-content: space-between;
+  justify-content: center;
   flex-wrap: wrap;
 }
 @media screen and (min-width: 768px) {
@@ -319,6 +319,7 @@ body {
 }
 .header__menu {
   fill: #212121;
+  margin-left: auto;
 }
 @media screen and (min-width: 768px) {
   .header__menu {
