--- a/sass/sections/_modal.scss
+++ b/sass/sections/_modal.scss
@@ -20,6 +20,8 @@
 }
 
 .modal {
+    width: calc(100% - 30px);
+    max-width: 450px;
     background-color: $background-color;
     position: absolute;
     top: 50%;
@@ -32,6 +34,11 @@
     transition: visibility 1000ms cubic-bezier(0.075, 0.82, 0.165, 1),
         transform 0.5s cubic-bezier(0.25, 0.31, 0.17, 0.89);
     transform: translate(-50%, -50%);
+
+                @media screen and (min-width: 1200px) {
+                    width: 528px;
+                    max-width: 100%;
+                }
 
     &__close-btn {
         background-color: transparent;
@@ -56,22 +63,25 @@
         text-align: center;
         font-size: 20px;
         font-weight: 700;
-        line-height: 1.15;
+        line-height: 1.5;
         letter-spacing: 0.6px;
         margin-bottom: 12px;
+
+        @media screen and (min-width) {
+            line-height: 1.15;
+        }
     }
 
     &__list {
-        @include flexbox();  
+        @include flexbox();
         flex-direction: column;
         gap: 10px;
         margin-bottom: 20px;
+        width: 100%;
     }
 
-    &__name {
-        @include flexbox($align: flex-start);
-        flex-direction: column;
-        gap: 4px;
+    &__item {
+        width: 100%
     }
 
     &__name {
@@ -81,20 +91,29 @@
         line-height: 1.17;
         letter-spacing: 0.12px;
         position: relative;
+        @include flexbox($align: flex-start);
+        flex-direction: column;
+        gap: 4px;
+        width: 100%;
     }
 
     &__input {
-        width: 448px;
+        width: 100%;
         height: 40px;
         border-radius: 4px;
         border: 1px solid $input-border-color;
         padding-left: 42px;
+        padding-right: 12px;
         color: $text-color;
         font-size: 12px;
         font-weight: 400;
         line-height: 1.17;
         letter-spacing: 0.12px;
         transition: border-color cubic-bezier(0.4, 0, 0.2, 1) 250ms;
+
+        @media screen and (min-width: 1200px) {
+            width: 448px;
+        }
 
         &:hover,
         &:focus {
@@ -119,7 +138,7 @@
     }
 
     &__coment {
-        width: 448px;
+        width: 100%;
         height: 120px;
         flex-shrink: 0;
         border-radius: 4px;
@@ -132,21 +151,26 @@
         letter-spacing: 0.12px;
         resize: none;
         transition: border-color cubic-bezier(0.4, 0, 0.2, 1) 250ms;
-    }
 
-    &__coment:hover {
-        border-color: $accent-color;
-    }
+        @media screen and (min-width: 1200px) {
+            width: 448px;
+        }
 
-    &__coment::placeholder {
-        color: rgba(117, 117, 117, 0.5);
-        font-size: 12px;
-        font-weight: 400;
-        letter-spacing: 0.12px;
+
+        &:hover {
+            border-color: $accent-color;
+        }
+
+        &::placeholder {
+            color: rgba(117, 117, 117, 0.5);
+            font-size: 12px;
+            font-weight: 400;
+            letter-spacing: 0.12px;
+        }
     }
 
     &__label {
-        @include flexbox();
+        @include flexbox($wrap: nowrap);
         gap: 8px;
     }
 
@@ -155,8 +179,8 @@
     }
 
     &__fake {
-        width: 16px;
         height: 15px;
+        min-width: 16px;
         border: 2px solid $title-color;
         border-radius: 2px;
         position: relative;
@@ -172,7 +196,7 @@
         }
     }
 
-    &__fake-svg {
+    &__icon {
         position: absolute;
         top: 50%;
         left: 50%;
@@ -190,20 +214,28 @@
 
     &__text {
         color: $text-color;
-        font-size: 14px;
+        font-size: 12px;
         font-weight: 400;
         line-height: 1.71;
         letter-spacing: 0.42px;
+
+        @media screen and (min-width: 1200px) {
+            font-size: 14px;
+        }
     }
 
     &__link {
         color: $accent-color;
-        font-size: 14px;
+        font-size: 12px;
         font-weight: 400;
         line-height: 1.71;
         letter-spacing: 0.42px;
         text-decoration-line: underline;
         transition: color cubic-bezier(0.4, 0, 0.2, 1) 250ms;
+
+        @media screen and (min-width: 1200px) {
+                font-size: 14px;
+            }
 
         &:hover,
         &:focus {
