--- a/styles/main.css
+++ b/styles/main.css
@@ -938,6 +938,8 @@ body {
 }
 
 .modal {
+  width: calc(100% - 30px);
+  max-width: 450px;
   background-color: #fff;
   position: absolute;
   top: 50%;
@@ -948,6 +950,12 @@ body {
   z-index: 5;
   transition: visibility 1000ms cubic-bezier(0.075, 0.82, 0.165, 1), transform 0.5s cubic-bezier(0.25, 0.31, 0.17, 0.89);
   transform: translate(-50%, -50%);
+}
+@media screen and (min-width: 1200px) {
+  .modal {
+    width: 528px;
+    max-width: 100%;
+  }
 }
 .modal__close-btn {
   background-color: transparent;
@@ -972,9 +980,14 @@ body {
   text-align: center;
   font-size: 20px;
   font-weight: 700;
-  line-height: 1.15;
+  line-height: 1.5;
   letter-spacing: 0.6px;
   margin-bottom: 12px;
+}
+@media screen and (min-width) {
+  .modal__title {
+    line-height: 1.15;
+  }
 }
 .modal__list {
   display: flex;
@@ -984,14 +997,10 @@ body {
   flex-direction: column;
   gap: 10px;
   margin-bottom: 20px;
+  width: 100%;
 }
-.modal__name {
-  display: flex;
-  align-items: flex-start;
-  justify-content: center;
-  flex-wrap: wrap;
-  flex-direction: column;
-  gap: 4px;
+.modal__item {
+  width: 100%;
 }
 .modal__name {
   color: #757575;
@@ -1000,19 +1009,32 @@ body {
   line-height: 1.17;
   letter-spacing: 0.12px;
   position: relative;
+  display: flex;
+  align-items: flex-start;
+  justify-content: center;
+  flex-wrap: wrap;
+  flex-direction: column;
+  gap: 4px;
+  width: 100%;
 }
 .modal__input {
-  width: 448px;
+  width: 100%;
   height: 40px;
   border-radius: 4px;
   border: 1px solid rgba(33, 33, 33, 0.2);
   padding-left: 42px;
+  padding-right: 12px;
   color: #757575;
   font-size: 12px;
   font-weight: 400;
   line-height: 1.17;
   letter-spacing: 0.12px;
   transition: border-color cubic-bezier(0.4, 0, 0.2, 1) 250ms;
+}
+@media screen and (min-width: 1200px) {
+  .modal__input {
+    width: 448px;
+  }
 }
 .modal__input:hover, .modal__input:focus {
   border-color: #2196f3;
@@ -1031,7 +1053,7 @@ body {
   fill: #2196f3;
 }
 .modal__coment {
-  width: 448px;
+  width: 100%;
   height: 120px;
   flex-shrink: 0;
   border-radius: 4px;
@@ -1044,6 +1066,11 @@ body {
   letter-spacing: 0.12px;
   resize: none;
   transition: border-color cubic-bezier(0.4, 0, 0.2, 1) 250ms;
+}
+@media screen and (min-width: 1200px) {
+  .modal__coment {
+    width: 448px;
+  }
 }
 .modal__coment:hover {
   border-color: #2196f3;
@@ -1064,15 +1091,15 @@ body {
   display: flex;
   align-items: center;
   justify-content: center;
-  flex-wrap: wrap;
+  flex-wrap: nowrap;
   gap: 8px;
 }
 .modal__checkbox {
   display: none;
 }
 .modal__fake {
-  width: 16px;
   height: 15px;
+  min-width: 16px;
   border: 2px solid #212121;
   border-radius: 2px;
   position: relative;
@@ -1086,7 +1113,7 @@ body {
   background-color: #2196f3;
   opacity: 0;
 }
-.modal__fake-svg {
+.modal__icon {
   position: absolute;
   top: 50%;
   left: 50%;
@@ -1101,19 +1128,29 @@ body {
 }
 .modal__text {
   color: #757575;
-  font-size: 14px;
+  font-size: 12px;
   font-weight: 400;
   line-height: 1.71;
   letter-spacing: 0.42px;
 }
+@media screen and (min-width: 1200px) {
+  .modal__text {
+    font-size: 14px;
+  }
+}
 .modal__link {
   color: #2196f3;
-  font-size: 14px;
+  font-size: 12px;
   font-weight: 400;
   line-height: 1.71;
   letter-spacing: 0.42px;
   text-decoration-line: underline;
   transition: color cubic-bezier(0.4, 0, 0.2, 1) 250ms;
+}
+@media screen and (min-width: 1200px) {
+  .modal__link {
+    font-size: 14px;
+  }
 }
 .modal__link:hover, .modal__link:focus {
   color: #1b73c3;
