--- a/sass/components/_scroll-to-top.scss
+++ b/sass/components/_scroll-to-top.scss
@@ -1,27 +1,37 @@
-.scroll.container {
-    position: fixed;
-    bottom: 75px;
-    left: 50%;
-    transform: translateX(+51%);
-    height: 70px;
-}
+// .scroll.container {
+
+// }
 
 .scroll {
 
     &__link {
+        position: fixed;
+        bottom: 55px;
+        right: 2%;
+        height: 70px;
         background-color: $accent-color;
-        width: 60px;
-        height: 60px;
+        width: 55px;
+        height: 55px;
         border: 4px solid $second-accent-color;
         box-shadow: 0px 0px 15px rgba(37, 38, 48, 0.82);
         @include flexbox();
         border-radius: 50%;
-        position: absolute;
+        // position: absolute;
         transition: background-color cubic-bezier(0.4, 0, 0.2, 1) 250ms;
         animation-name: scroll-rotate;
         animation-duration: 2s;
         animation-timing-function: cubic-bezier(0.52, 0.8, 0.54, 0.26);
         animation-iteration-count: infinite;
+
+        @media screen and (min-width: 768px) {
+            width: 57px;
+                height: 57px;
+        }
+
+                @media screen and (min-width: 1200px) {
+                    width: 60px;
+                    height: 60px;
+                }
 
         &:hover,
         &:hover {
