--- a/styles/portfolio.css
+++ b/styles/portfolio.css
@@ -118,18 +118,14 @@ body {
   }
 }
 
-.scroll.container {
-  position: fixed;
-  bottom: 75px;
-  left: 50%;
-  transform: translateX(51%);
-  height: 70px;
-}
-
 .scroll__link {
+  position: fixed;
+  bottom: 55px;
+  right: 2%;
+  height: 70px;
   background-color: #2196f3;
-  width: 60px;
-  height: 60px;
+  width: 55px;
+  height: 55px;
   border: 4px solid #fff;
   box-shadow: 0px 0px 15px rgba(37, 38, 48, 0.82);
   display: flex;
@@ -137,12 +133,23 @@ body {
   justify-content: center;
   flex-wrap: wrap;
   border-radius: 50%;
-  position: absolute;
   transition: background-color cubic-bezier(0.4, 0, 0.2, 1) 250ms;
   animation-name: scroll-rotate;
   animation-duration: 2s;
   animation-timing-function: cubic-bezier(0.52, 0.8, 0.54, 0.26);
   animation-iteration-count: infinite;
+}
+@media screen and (min-width: 768px) {
+  .scroll__link {
+    width: 57px;
+    height: 57px;
+  }
+}
+@media screen and (min-width: 1200px) {
+  .scroll__link {
+    width: 60px;
+    height: 60px;
+  }
 }
 .scroll__link:hover, .scroll__link:hover {
   background-color: #1b73c3;
