--- a/sass/base/_container.scss
+++ b/sass/base/_container.scss
@@ -2,7 +2,7 @@
     width: 100%;
     padding: 0 15px;
     margin: 0 auto;
-    outline: red dashed;
+    // outline: red dashed;
 
     @media screen and (min-width: 480px) {
         width: 480px;
