--- a/sass/components/_scroll-to-top.scss
+++ b/sass/components/_scroll-to-top.scss
@@ -1,14 +1,15 @@
-// .scroll.container {
-
-// }
-
 .scroll {
 
-    &__link {
+    &__container.container {
         position: fixed;
-        bottom: 55px;
-        right: 2%;
-        height: 70px;
+            bottom: 55px;
+            transform: translateX(-50%);
+            left: 50%;
+            height: 70px;
+    }
+
+    &__link {
+        margin-left: auto;
         background-color: $accent-color;
         width: 55px;
         height: 55px;
@@ -16,7 +17,6 @@
         box-shadow: 0px 0px 15px rgba(37, 38, 48, 0.82);
         @include flexbox();
         border-radius: 50%;
-        // position: absolute;
         transition: background-color cubic-bezier(0.4, 0, 0.2, 1) 250ms;
         animation-name: scroll-rotate;
         animation-duration: 2s;
