--- a/styles/main.css
+++ b/styles/main.css
@@ -103,7 +103,6 @@ html {
 body {
   font-family: Roboto;
   position: relative;
-  overflow-x: hidden;
 }
 
 .container {
@@ -127,15 +126,10 @@ body {
   }
 }
 
-.scroll__container.container {
-  position: fixed;
-  bottom: 55px;
-  transform: translateX(-50%);
-  left: 50%;
-  height: 70px;
-}
 .scroll__link {
-  margin-left: auto;
+  position: fixed;
+  bottom: 35px;
+  right: 1%;
   background-color: #2196f3;
   width: 55px;
   height: 55px;
@@ -352,6 +346,7 @@ body {
 
 .hero__padding {
   height: 60px;
+  overflow: hidden;
 }
 @media screen and (min-width: 768px) {
   .hero__padding {
@@ -434,6 +429,7 @@ body {
 
 .advantages {
   padding: 60px 0;
+  overflow: hidden;
 }
 @media screen and (min-width: 1200px) {
   .advantages {
@@ -490,6 +486,7 @@ body {
 
 .doing {
   display: none;
+  overflow: hidden;
 }
 @media screen and (min-width: 1200px) {
   .doing {
@@ -546,6 +543,7 @@ body {
 .team {
   background: #f5f4fa;
   padding: 60px 0;
+  overflow: hidden;
 }
 @media screen and (min-width: 1200px) {
   .team {
@@ -636,6 +634,7 @@ body {
 
 .client {
   padding: 60px 0;
+  overflow: hidden;
 }
 @media screen and (min-width: 1200px) {
   .client {
@@ -656,8 +655,22 @@ body {
   gap: 30px;
   width: 100%;
 }
+.client__item {
+  width: calc((100% - 30px) / 2);
+}
+@media screen and (min-width: 768px) {
+  .client__item {
+    width: 226px;
+  }
+}
+@media screen and (min-width: 1200px) {
+  .client__item {
+    width: 170px;
+  }
+}
 .client__link {
-  width: 210px;
+  display: block;
+  width: 100%;
   height: 92px;
   display: flex;
   align-items: center;
@@ -666,16 +679,6 @@ body {
   border-radius: 4px;
   border: 1px solid #afb1b8;
   transition: border cubic-bezier(0.4, 0, 0.2, 1) 250ms;
-}
-@media screen and (min-width: 768px) {
-  .client__link {
-    width: 226px;
-  }
-}
-@media screen and (min-width: 1200px) {
-  .client__link {
-    width: 170px;
-  }
 }
 .client__link:hover, .client__link:focus {
   border: 1px solid #2196f3;
@@ -697,6 +700,7 @@ body {
 .footer {
   background-color: #2f303a;
   padding: 60px 0;
+  overflow: hidden;
 }
 .footer__container {
   display: flex;
@@ -708,6 +712,7 @@ body {
 @media screen and (min-width: 768px) {
   .footer__container {
     gap: 60px 165px;
+    align-items: flex-start;
   }
 }
 @media screen and (min-width: 1200px) {
@@ -755,6 +760,7 @@ body {
 @media screen and (min-width: 1200px) {
   .footer__list {
     align-items: flex-start;
+    justify-content: flex-start;
     gap: 9px;
   }
 }
@@ -776,8 +782,15 @@ body {
   font-style: normal;
   text-align: center;
 }
-.footer__icon {
-  padding-top: 12px;
+@media screen and (min-width: 768px) {
+  .footer__icon {
+    padding-top: 5px;
+  }
+}
+@media screen and (min-width: 1200px) {
+  .footer__icon {
+    padding-top: 12px;
+  }
 }
 .footer__title {
   color: #fff;
@@ -818,7 +831,6 @@ body {
   fill: #fff;
 }
 .footer__form {
-  padding-top: 12px;
   width: 100%;
 }
 @media screen and (min-width: 768px) {
@@ -829,6 +841,7 @@ body {
 @media screen and (min-width: 1200px) {
   .footer__form {
     max-width: 570px;
+    padding-top: 12px;
   }
 }
 .footer__call {
