--- a/sass/sections/_clients.scss
+++ b/sass/sections/_clients.scss
@@ -1,5 +1,6 @@
 .client {
     padding: 60px 0;
+    overflow: hidden;
 
     @media screen and (min-width: 1200px) {
         padding: 94px 0;
@@ -20,21 +21,27 @@
         width: 100%;
     }
 
+    &__item {
+        width: calc((100% - 30px) / 2);
+
+        @media screen and (min-width: 768px) {
+                width: 226px;
+            }
+        
+            @media screen and (min-width: 1200px) {
+                width: 170px;
+            }
+    }
+
     &__link {
-        width: 210px;
+        display: block;
+        width: 100%;
+         //   max-width: 100%;
         height: 92px;
         @include flexbox();
         border-radius: 4px;
         border: 1px solid $icon-fill;
         transition: border cubic-bezier(0.4, 0, 0.2, 1) 250ms;
-
-        @media screen and (min-width: 768px) {
-            width: 226px;
-        }
-
-        @media screen and (min-width: 1200px) {
-            width: 170px;
-        }
 
         &:hover,
         &:focus {
