--- a/sass/sections/_team.scss
+++ b/sass/sections/_team.scss
@@ -1,6 +1,7 @@
 .team {
     background: $background-team-color;
     padding: 60px 0;
+    overflow: hidden;
 
     @media screen and (min-width: 1200px) {
         display: block;
